fixed the edit modal issue

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://media.licdn.com/dms/image/v2/D4E0BAQE1sz0fb9kfhg/company-logo_200_200/B4EZisEPGGGYAI-/0/1755233448805/source_asia_logo?e=1759363200&v=beta&t=Apvovz0XPMZflngAb2zVYvRtVyvBRRbLvVSX9_czh6o" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Source Asia</title>
   </head>
   <body>
     <div id="root"></div>
